  (Xavier Leroy, report by Marc Lasson)
- PR#7039: Unix.getsockname returns garbage for unnamed PF_UNIX sockets
  (Xavier Leroy)
- PR#7042 and GPR#295: CSE optimization confuses the FP literals +0.0 and -0.0
  (Xavier Leroy)
- PR#7075: Fix repetitions in ocamldoc generated documentation
  (Florian Angeletti)
- PR#7082: Object type in recursive module's `with` annotation
- PR#7096: ocamldoc uses an incorrect subscript/superscript style
- GPR#205: Clear caml_backtrace_last_exn before registering as root
  (report and fix by Frederic Bour)
- GPR#220: minor -dsource error on recursive modules
  (Hongbo Zhang)
- GPR#228: fix a dangling internal pointer in (bytecode )debug_info
  (Gabriel Scherer and Mark Shinwell and Xavier Leroy)
- GPR#233: Make CamlinternalMod.init_mod robust to optimization
  (Pierre Chambart, Mark Shinwell)
- GPR#249: fix a few hardcoded ar commands
  (Daniel Bünzli)
- GPR#251: fix cross-compilation with ocamldoc enabled
  (whitequark)
- GPR#280: Fix stdlib dependencies for .p.cmx (Pierre Chambart,
  Mark Shinwell)
- GPR#283: Fix memory leaks in intern.c when OOM is raised
  (Marc Lasson, review by Alain Frisch)
- GPR#313: Prevent quadratic cases in CSE
  (Pierre Chambart, review by Xavier Leroy)
- PR#6795, PR#6996: Make ocamldep report errors passed in
  [%ocaml.error] extension points
  (Jérémie Dimino)
- GPR#355: make ocamlnat build again
  (Jérémie Dimino, Thomas Refis)

Features wishes:
- PR#4518, GPR#29: change location format for reporting errors in ocamldoc
  (Sergei Lebedev)
- PR#4714: List.cons
- PR#5418 (comments) : generate dependencies with $(CC) instead of gcc
- PR#6167: OCAMLPARAM support for disabling PIC generation ("pic=0")
  (Gabor Pali)
- PR#6367: introduce Asttypes.arg_label to encode labelled arguments
- PR#6452, GPR#140: add internal suport for custom printing formats
  (Jérémie Dimino)
- PR#6611: remove the option wrapper on optional arguments in the syntax tree
- PR#6635: support M.[], M.(), M.{< >} and M.[| |]